index.css
body {
    margin: 0;
    padding: 10px;
    font-family: Arial, Helvetica, sans-serif;
    min-width: 400px;
    max-width: 400px;
    min-height: 600px;
    max-height: 600px;
}

input {
    width: 100%;
    height: fit-content;
    padding: 10px;
    box-sizing: border-box;
    border: 2px dashed #0077B5;
    margin-bottom: 4px;
    font-size: 1.5rem;
}


button {
    background: #0077B5;
    color: white;
    padding: 10px 20px;
    border: 1px solid #0077B5;
    font-weight: bold;
    border: none;
    border-radius: 25px;
    margin-top: 1rem;
    transition: 0.3s ease;
    margin-right: 0.25rem;
}
button:hover{
    transform: scale(110%);
}

#delete-btn {
    background: white;
    color: #0077B5;
    border: 2px solid #0077B5;
}
#delete-btn:hover{
    background: #0077B5;
    color: white;
}

ul {
    margin-top: 20px;
    list-style: none;
}

li {
    margin-top: 5px;
    font-size: 1.15rem;
}

a {
    color: #0077B5;
}

